updating homepage.html to index.html in navigation

--- a/enroll.html
+++ b/enroll.html
@@ -103,7 +103,7 @@
         </div>
         
         <nav id="links">
-            <a href="./homepage.html">HOME</a>
+            <a href="./index.html">HOME</a>
             <a href="./about.html">ABOUT</a>
             <a href="./gallery.html">GALLERY</a>
             <a href="./contact.html">CONTACT US</a>
