updating enroll url

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             grandchildren alike!
             </span>
             <br />
-            <a href="./stitching_generations.html"><button>Enroll now</button></a>
+            <a href="./enroll.html"><button>Enroll now</button></a>
         </div>
     </div>
 </main>
