making building bonds message font size responsive

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         }
         #building-bonds-message {
             padding: 20px 50px 0 50px;
-            font-size: 100px;
+            font-size: clamp(50px, 3vw, 100px);
             font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             color: #ffffff;
             text-align: center;
