Updating to link homepage in logo

--- a/enroll.html
+++ b/enroll.html
@@ -97,10 +97,12 @@
 </head>
 <body>
     <header>
-        <div id="logo-container">
-            <img src='./images/thread-ball-icon (1).png' height="70" width="70"></p>
-            Kyra's Cozy Corner
-        </div>
+        <a href="./index.html">
+            <div id="logo-container">
+                <img src='./images/thread-ball-icon (1).png' height="70" width="70"></p>
+                Kyra's Cozy Corner
+            </div>
+        </a>
         
         <nav id="links">
             <a href="./index.html">HOME</a>
